# particle

./: .gitignore  README.md  manage.py  pyproject.toml
benchmark/: admin.py  main.py  models.py  utils.py  visualize.py
benchmark/management/: __init__.py
benchmark/management/commands/: __init__.py  benchmark.py
benchmark/migrations/: 0001_initial.py  0002_benchmarkrun_name.py
benchmark2/: main.py
language_translation/: call_graph_analyzer.py  code_editor.py  conversation.py  file_manager.py  file_map.py  llm_results_parser.py  llm_translator.py  test_call_graph_analyzer.py  test_multi_turn_function_calling_gpt4.py  test_translator.py  translator.py
language_translation/sample_code/: args_variants.py  nested_functions.py  retype_vars.py  shopping_cart.py  shopping_cart_third_party_libs.py
particle/: asgi.py  code_editor.py  file_manager.py  llm_translator.py  settings.py  translator.py  urls.py  utils.py  wsgi.py
particle/sample_code/: calculate_square.py  nested_calls.py  shopping_cart.go  simple_go_app.go
particle/scripts/: test_multi_turn_function_calling_gpt4.py
particle/tests/data/: deepseek_v3.py
particle2/: call_graph_analyzer.py  llm_translator.py
particle2/sample_code/: args_variants.py  attribute_chains.py  fizzbuzz.py  shopping_cart.py  simple_python_app.py  test_imports.py
particle2/scripts/: test_multi_turn_function_calling_sonnet.py  test_multi_turn_function_calling_with_instructor_gpt4.py
particle2/tests/: test_call_graph_analyzer.py
repos/shopping_cart/: shopping_cart.py  test_shopping_cart.py
results/finals_exercism/claude-3-5-sonnet-20241022/results/: accumulate.txt  acronym.txt  all-your-base.txt  allergies.txt  alphametics.txt  anagram.txt  bank-account.txt  beer-song.txt  binary-search.txt  binary.txt  book-store.txt  bottle-song.txt  clock.txt  collatz-conjecture.txt  complex-numbers.txt  crypto-square.txt  custom-set.txt  darts.txt  diamond.txt  (+72 more)
results/finals_exercism/claude-3-7-sonnet-20250219/: results.txt
swift/: main.py
(+656 files in other folders)
