[tool.poetry]
name = "language-translation"
version = "0.1.0"
description = ""
authors = ["Adam Bossy <adambossy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cloc = "^0.2.5"
tree-sitter-swift = { git = "https://github.com/alex-pinkus/tree-sitter-swift.git" }
tree-sitter = "^0.23.2"
tree-sitter-python = "^0.23.6"
click = "^8.1.8"
pytest = "^8.3.4"
graphviz = "^0.20.3"
langchain = "^0.3.13"
langchain-openai = "^0.2.14"
anthropic = "^0.42.0"
langchain-anthropic = "^0.3.1"
python-dotenv = "^1.0.1"
langchain-community = "^0.3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
