[tool.poetry]
name = "particle"
version = "0.1.0"
description = ""
authors = ["Adam Bossy <adambossy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cloc = "^0.2.5"
click = "^8.1.8"
pytest = "^8.3.4"
graphviz = "^0.20.3"
anthropic = "^0.42.0"
python-dotenv = "^1.0.1"
gitpython = "^3.1.44"
litellm = "^1.61.20"
instructor = "^1.7.2"
langfuse = "^2.57.10"
numpydoc = "^1.8.0"
matplotlib = "^3.10.0"
aiofiles = "^24.1.0"
fireworks-ai = "^0.15.12"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
